# Actuator-AI

./: .env.example  .gitignore  README.md  main.py  main.tex  pyproject.toml  run.bat  run.sh  tests.md
actuator_agents/: __init__.py
actuator_agents/account_security/: __init__.py  agent.py
actuator_agents/audit/: agent.py
actuator_agents/billing_finance/: __init__.py  agent.py
actuator_agents/linguistic/: __init__.py  agent.py
actuator_agents/operations_sync/: __init__.py  agent.py
actuator_agents/success_retention/: __init__.py  agent.py
actuator_agents/supervisor_router/: __init__.py  agent.py
actuator_agents/technical_specialist/: __init__.py  agent.py
agents/01_hello_agent/: README.md  agent.py
agents/02_support_agent/: agent.py
agents/03_devops_agent/: agent.py
agents/04_ecommerce_multiagent/: agent.py
agents/05_banking_guarded_agent/: agent.py
backend/: main.py
backend/api/: schemas.py
backend/core/: config.py
backend/db/: schema.sql  seed.sql  session.py
backend/models/: agent.py  conversation.py
backend/services/: agent_service.py
backend/static/: index.html
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  Docs.tsx  EnhancedAuth.tsx  LandingPage.css  LandingPage.tsx  api.ts  index.css  store.ts
shared/: __init__.py  mcp_config.py  tests.md
shared/guardrails/: safety.py
shared/models/: __init__.py  groq_provider.py  litellm_provider.py  ollama_provider.py  openai_provider.py
shared/schemas/: common.py
shared/tools/: db_tools.py  math_tools.py  notification_tools.py  time_tools.py  (+1 more)
(+4 files in other folders)
