[project]
name = "agentic-ai-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "openai>=2.31.0",
    "openai-agents>=0.13.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]
